Edit .gitignore. Rename NetworkInterface renamed since such a library already exists.

--- a/NetworkInterfaceLib/NetworkInterfaceLib.csproj
+++ b/NetworkInterfaceLib/NetworkInterfaceLib.csproj
@@ -47,7 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NetworkInterface.cs" />
+    <Compile Include="NetworkInterfaceLib.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
