Finished splitting MainWindow on subgrids. Move NetworkInterfaceLib to Models folder. Remove namespace NetworkInterfaceLib.

--- a/NetworkInterfaceConfigurator/NetworkInterfaceConfigurator.csproj
+++ b/NetworkInterfaceConfigurator/NetworkInterfaceConfigurator.csproj
@@ -69,6 +69,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Models\NetworkInterfaceLib.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -105,8 +106,6 @@
   <ItemGroup>
     <Resource Include="Design\Icon-3.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
