--- a/NetworkInterfaceConfigurator/packages.config
+++ b/NetworkInterfaceConfigurator/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DevExpressMvvm" version="19.2.3" targetFramework="net461" />
+  <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net461" />
 </packages>
