Fix field for select adapter. (when you clicks on the text, in this elector, didn't open popup list) Add first part of logic for set properties to adapter. (If click change button, send all textbox objects to VM)

--- a/NetworkInterfaceConfigurator/NetworkInterfaceConfigurator.csproj
+++ b/NetworkInterfaceConfigurator/NetworkInterfaceConfigurator.csproj
@@ -107,6 +107,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Converters\AdapterSettingsConverter.cs" />
     <Compile Include="Models\NetworkInterfaceLib.cs" />
     <Compile Include="Models\ProperyChanged.cs" />
     <Compile Include="ViewModels\EditPresetViewModel.cs" />
