Stylized adapter settings fields on error.

--- a/NetworkInterfaceConfigurator/NetworkInterfaceConfigurator.csproj
+++ b/NetworkInterfaceConfigurator/NetworkInterfaceConfigurator.csproj
@@ -151,6 +151,7 @@
     <Resource Include="Design\Fonts\Raleway-Regular.ttf" />
     <Resource Include="Design\Fonts\calibri.ttf" />
     <Resource Include="Design\Fonts\Raleway-Bold.ttf" />
+    <Resource Include="Design\Fonts\Roboto-Medium.ttf" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
