--- a/NetworkInterfaceConfigurator/NetworkInterfaceConfigurator.csproj
+++ b/NetworkInterfaceConfigurator/NetworkInterfaceConfigurator.csproj
@@ -109,6 +109,7 @@
     </Compile>
     <Compile Include="Converters\AdapterSettingsConverter.cs" />
     <Compile Include="Models\NetworkInterfaceLib.cs" />
+    <Compile Include="Models\NotifyDataErrorInfoAndPropertyChanged.cs" />
     <Compile Include="Models\ProperyChanged.cs" />
     <Compile Include="ViewModels\EditPresetViewModel.cs" />
     <Compile Include="ViewModels\RelayCommand.cs" />
