--- a/NetworkInterfaceConfigurator/packages.config
+++ b/NetworkInterfaceConfigurator/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.3.0" targetFramework="net461" />
+  <package id="System.Data.SQLite" version="1.0.112.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.112.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.EF6" version="1.0.112.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Linq" version="1.0.112.0" targetFramework="net461" />
   <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net461" />
 </packages>
