--- a/NetworkInterfaceConfigurator/NetworkInterfaceConfigurator.csproj
+++ b/NetworkInterfaceConfigurator/NetworkInterfaceConfigurator.csproj
@@ -191,6 +191,7 @@
     <Compile Include="Models\NotifyDataErrorInfoAndPropertyChanged.cs" />
     <Compile Include="Models\Preset.cs" />
     <Compile Include="Models\PropChanged.cs" />
+    <Compile Include="Models\RandMAC.cs" />
     <Compile Include="ViewModels\EditPresetViewModel.cs" />
     <Compile Include="ViewModels\RelayCommand.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
